2009-09-25  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Renamed SoObjects/Contacts/SOGoContactLDAPFolder to
	SoObjects/Contacts/SOGoContactSourceFolder
	* Renamed SoObjects/SOGo/LDAPUserManager to
	SoObjects/SOGo/SOGoserManager.m
	* Added SoObjects/SOGo/SOGoSource.h and
	SoObjects/SOGo/SQLSource.{h,m}
	We now support authentication and address book sources
	coming from a SQL database. This can be used concurrently
	with LDAP sources. Modified many classes to reflect this
	change.
	* SoObjects/SOGo/LDAPSource.m 
	We trim the bind field value prior to adding it to our
	LDAP search filter.
	* UI/MailPartViewers/UIxMailPartSignedViewer.m and friends:
	We now show more information on the S/MIME encoded messages.
	We also handle correctly multipart/alternative messages.

2009-09-24  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m (bareFetchFields:): Handled
	the Exception when all conditions are nil.
	* SoObjects/Contacts/NGVCard+SOGo.m (ldifString): Made corrections
	reflecting from the fixes in NGVCard to properly format an address.

2009-09-23  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m (importComponent:): Fixed 
	addition of BEGIN/END block.
	* SoObjects/Appointments/SOGoWebAppointmentFolder.m (deleteAllContent):
	Created deleteAllContent to be able to change it in the store bundle.
	* UI/Scheduler/UIxCalMainActions.m (addWebCalendarAction): Small improvement.

2009-09-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SOGoAutoCompletion.js
	(SOGoAutoCompletionInterface.onKeyDown): (needs review) we don't
	overwrite the input's name attributes with the "uname". Otherwise
	the form will not have the correct data when submitted and the
	to/cc/bcc fields will be ignored.

2009-09-23  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* UI/PreferencesUI/UIxPreferences.m 
	We now fallback to the default system selected day.

2009-09-22  Ludovic Marcotte  <lmarcotte@inverse.ca>
